    - Give more descriptive well-formedness errors for out-of-range
      hidden service descriptor/protocol versions.
    - Make memory debugging output describe more about history of cell
      allocation.

  o Minor features (security):
    - Be slightly more paranoid about overwriting sensitive memory on free,
      as a defensive programming tactic to ensure forward secrecy.

  o Deprecated features (controller):
    - The status/version/num-versioning and status/version/num-concurring
      GETINFO options are no longer useful in the V3 directory protocol:
      treat them as deprecated, and warn when they're used.

  o Major bugfixes:
    - If we're a relay, avoid picking ourselves as an introduction point,
      a rendezvous point, or as the final hop for internal circuits. Bug
      reported by taranis and lodger. Bugfix on 0.1.2.x.

  o Minor bugfixes:
    - Directory caches now fetch certificates from all authorities
      listed in a networkstatus consensus, even when they do not
      recognize them.  Fixes bug 571.  Bugfix on 0.2.0.x.
    - Stop recommending that every server operator send mail to tor-ops.
      Resolves bug 597.  Bugfix on 0.1.2.x.
    - Detect version of OSX where malloc_good_size is present in the
      library but never actually declared.  Resolves bug 587.  Bugfix
      on 0.2.0.x.
    - When connecting to a bridge without specifying its key, insert
      the connection into the identity-to-connection map as soon as
      a key is learned.  Fixes bug 574.  Bugfix on 0.2.0.x.
    - When our consensus networkstatus has been expired for a while, stop
      being willing to build circuits using it.  Fixes bug 401.  Bugfix on
      0.1.2.x.
    - Stop incorrectly truncating zlib responses to directory authority
      signature download requests.  Fix for bug 593.  Bugfix on 0.2.0.x.
    - Don't trigger an assert if we start a directory authority with a
      private IP address (like 127.0.0.1).